--- a/JOB_PORTAL/JOB_PORTAL/Views/Auth/Index.cshtml
+++ b/JOB_PORTAL/JOB_PORTAL/Views/Auth/Index.cshtml
@@ -53,7 +53,7 @@
     <div class="login-box">
         <h3 class="text-center mb-4">Login</h3>
 
-        <form asp-controller="Account" asp-action="Login" method="post">
+        <form asp-controller="Auth" asp-action="Index" method="post">
             <div class="mb-3">
                 <label for="username">Username</label>
                 <input type="text" class="form-control" id="username" name="Username" required />
@@ -78,6 +78,12 @@
                 <a asp-controller="Account" asp-action="ForgotPassword">Forgot password?</a>
                 <a asp-controller="Account" asp-action="ResetPassword">Reset password</a>
             </div>
+            <div class="mt-3 d-flex justify-content-center login-links">
+                <a asp-controller="Auth" asp-action="RegisterSeeker">Register</a>
+            </div>
         </form>
     </div>
+  @{
+      <p>@ViewBag.error</p>
+  }
 </div>
